ECollator: Always include Latin/English letters
In the new Address book cards I see on the very right a list of letters, that allow me to jump to the contacts starting with that letter. I have in my address book contact names in Cyrillic and Latin.
The problem report is that the list of letters contains only the Cyrillic letters and for all the other it has horizontal ellipsis (possibly at the same time above and below the Cyrillic letters).