I#486 - ECollator: Always include Latin/English letters

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/-/issues/486